<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

    </group>
    <item android:title="@string/nav_account_management">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/baseline_feed_black_24dp"
                    android:title="@string/nav_profile" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_setting_management">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/baseline_settings_black_24dp"
                    android:title="@string/nav_setting" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/baseline_help_outline_black_24dp"
                    android:title="@string/nav_help" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_power_settings_new_black_24dp"
                    android:title="@string/nav_Logout" />
            </group>
        </menu>
    </item>
</menu>