<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_learn"
        android:title="@string/bottom_nav_learn"
        android:icon="@drawable/baseline_school_black_24dp"/>
    <item
        android:id="@+id/bottom_nav_blog"
        android:title="@string/blog"
        android:icon="@drawable/baseline_school_black_24dp"/>
    <item
        android:id="@+id/bottom_nav_alarm"
        android:title="@string/bottom_nav_alarm"
        android:icon="@drawable/baseline_alarm_black_24dp"/>
    <item
        android:id="@+id/bottom_nav_vocabulary"
        android:title="@string/bottom_nav_vocabulary"
        android:icon="@drawable/baseline_library_books_black_24dp"/>
    <item
        android:id="@+id/bottom_nav_profile"
        android:title="@string/ca_nhan"
        android:icon="@drawable/baseline_account_circle_black_24dp"/>
</menu>