<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nav_setting"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ct_layout_border2"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_btn_lesson"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/iamsky"
                app:civ_border_color="@color/l_grey"
                app:civ_border_width="1dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_user"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_watch_profile"
                    android:textColor="#B44FBCED"
                    android:textSize="12sp"
                    android:textStyle="italic"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btn_setting_editprofile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_title_btn_profile"
                android:elevation="4dp"
                android:shadowRadius="4"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="8dp"
                />
            <Button
                android:id="@+id/btn_setting_account"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_title_btn_account"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="8dp"
                />
            <Button
                android:id="@+id/btn_setting_study_mode"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_title_btn_studymode"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="8dp"
                />
            <Button
                android:id="@+id/btn_setting_privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tv_title_btn_privacy"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="8dp"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>