<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.EditProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/title_profile"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/img_user"
                android:src="@drawable/ic_account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout_age"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/edt_age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAge"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rdb_male" />

                <RadioButton
                    android:id="@+id/rdbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mgl_rdb_female"
                    android:text="@string/rdb_female" />

                <RadioButton
                    android:id="@+id/rdbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mgl_rdb_female"
                    android:text="@string/rdb_another" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/grey"
            android:elevation="8dp"
            android:id="@+id/btn_edit_profile_back"
            android:text="@string/btn_back" />

        <Button
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/blue"
            android:layout_marginHorizontal="24dp"
            android:id="@+id/btn_edit_profile_save"
            android:elevation="8dp"
            android:text="@string/btn_save" />
    </LinearLayout>
</LinearLayout>