<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.EditProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/title_account"
        android:textColor="@color/orange"
        android:textSize="@dimen/textsize_title_account"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_pass"
            app:passwordToggleDrawable="@drawable/ct_select_icon_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCurrentPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/new_pass"
            app:passwordToggleContentDescription="@string/tv_study_mode_superhard"
            app:passwordToggleDrawable="@drawable/ct_select_icon_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ip_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/re_pass"
            app:passwordToggleDrawable="@drawable/ct_select_icon_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ip_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_edit_account_back"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:backgroundTint="@color/grey"
            android:elevation="4dp"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/btn_edit_account_save"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_marginLeft="@dimen/mgl_btn_save"
            android:backgroundTint="@color/blue"
            android:elevation="4dp"
            android:text="@string/btn_save" />
    </LinearLayout>
</LinearLayout>