<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.EditProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/title_study_mode"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="202dp"
        android:layout_height="273dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_mode_study" />

    <CheckBox
        android:id="@+id/cb_edit_study_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/purple_500"
        android:checked="true"
        android:text="@string/cb_study_mode_remind"
        android:textColor="@color/purple_500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/item_basic"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ct_study_mode_border_basic"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_study_mode_basic"
                android:layout_width="0dp"
                android:duplicateParentState="true"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/mgl_tv_study_mode"
                android:layout_weight="1"
                android:elevation="2dp"
                android:text="@string/tv_study_mode_basic"
                android:textColor="#605B5B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_edit_study_mode_sub_basic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:duplicateParentState="true"
                android:layout_weight="1"
                android:text="@string/tv_study_mode_xp_basic"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_medium"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ct_study_mode_border_medium"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_study_mode_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/mgl_tv_study_mode"
                android:layout_weight="1"
                android:elevation="2dp"
                android:text="@string/tv_study_mode_medium"
                android:textColor="#605B5B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_edit_study_mode_sub_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/tv_study_mode_xp_medium"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_hard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ct_study_mode_border_hard"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_study_mode_hard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/mgl_tv_study_mode"
                android:layout_weight="1"
                android:elevation="2dp"
                android:text="@string/tv_study_mode_hard"
                android:textColor="#605B5B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_edit_study_mode_sub_hard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/tv_study_mode_xp_hard"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_superhard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/ct_study_mode_border_superhard"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_edit_study_mode_superhard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/mgl_tv_study_mode"
                android:layout_weight="1"
                android:elevation="2dp"
                android:text="@string/tv_study_mode_superhard"
                android:textColor="#605B5B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_edit_study_mode_sub_superhard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/tv_study_mode_xp_superhard"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>