<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.ForgetPassword">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/qu_n_m_t_kh_u"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="128dp"
            android:background="@drawable/border"
            android:drawableStart="@drawable/ic_email"
            android:ems="30"
            android:padding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#27BFD3"
        android:text="@string/send_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtEmail" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>